# TrackFast

./: .gitignore  README.md  do.ps1  pyproject.toml  setup.cfg  setup.py
TrackFast/: assets.py  definitions.py
TrackFast/jobs/: convert_to_json.py  prepare_raw.py  utils.py
