[project]
name = "TrackFast"
version = "0.1.0"
description = "An app to fast track my personal finance."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-webserver"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[dependency-groups]
lint = [
    "ruff>=0.11.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "TrackFast.definitions"
code_location_name = "TrackFast"

[tool.setuptools.packages.find]
exclude=["TrackFast_tests"]


